js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenFiles/lib1/JsModuleB.0.kt
@file:JsModule("../js-module-b.mjs")
